fix layout issues

--- a/news-tracker/src/styles/header/header.scss
+++ b/news-tracker/src/styles/header/header.scss
@@ -48,6 +48,6 @@
 
   }
   .searchInput {
-    color: white !important;
+
   }
 }
